--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
   --light-gray: #e5e5e5;
   --gray: #c8c8c8;
   --navy: #001f35;
-  --red: #f00000;
+  --red: #ee0000;
   --dark-blue: #00457c;
   --dark-orange: #f85619;
 
